# DockStack

./: .gitignore  CODING_RULES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs
src/config/: mod.rs
src/docker/: compose.rs  manager.rs  mod.rs
src/monitor/: mod.rs
src/port_scanner/: mod.rs
src/services/: mod.rs
src/ssl/: mod.rs
src/terminal/: mod.rs
src/tray/: mod.rs
src/ui/: app.rs  mod.rs  panels.rs  theme.rs  widgets.rs
src/utils/: mod.rs
