[package]
name = "dockstack"
version = "0.1.0"
edition = "2021"
authors = ["DockStack Team"]
description = "A native desktop DevStack Manager powered by Docker Compose"
license = "MIT"

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

sysinfo = "0.33"
crossbeam-channel = "0.5"
tray-icon = "0.19"
image = "0.25"
rfd = "0.15"

chrono = "0.4"
dirs = "6"
open = "5"
which = "7"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
rcgen = "0.13"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
